// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SecondaryHeader component 1 renders as expected 1`] = `
<div
  aria-label="hello world secondary"
  className="secondary-header-wrapper-min"
  role="region"
>
  <div
    className="secondary-header simple-header"
  >
    <h1
      className="bx--detail-page-header-title"
    >
      hello world
    </h1>
  </div>
</div>
`;

exports[`SecondaryHeader component 2 renders clickable as expected 1`] = `
<div
  aria-label="hello world"
  className="secondary-header-wrapper"
  role="region"
>
  <div
    className="secondary-header secondary-header-grc-overview simple-header"
  >
    <header
      aria-label="Heading: hello world"
    >
      <div
        className="bx--detail-page-header-content"
      >
        <div
          className="bx--detail-page-header-title-container"
        >
          <h1
            className="bx--detail-page-header-title"
          >
            hello world
          </h1>
        </div>
        <nav
          aria-label="hello world undefined"
          className="bx--tabs"
          role="navigation"
          selected={0}
        >
          <div
            aria-label="listbox"
            className="bx--tabs-trigger"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="listbox"
            tabIndex={0}
          >
            <a
              className="bx--tabs-trigger-text"
              href="#"
              onClick={[Function]}
              tabIndex={-1}
            >
              Application
            </a>
            <svg
              alt="show menu options"
              aria-label="show menu options"
              fillRule="evenodd"
              height="5"
              role="img"
              viewBox="0 0 10 5"
              width="10"
            >
              <title>
                show menu options
              </title>
              <path
                d="M0 0l5 4.998L10 0z"
              />
            </svg>
          </div>
          <ul
            className="bx--tabs__nav bx--tabs__nav--hidden"
            role="tablist"
          >
            <li
              className="bx--tabs__nav-item bx--tabs__nav-item--selected"
              id="dashboard-application"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="presentation"
              selected={true}
              tabIndex={-1}
            >
              <a
                aria-selected={true}
                className="bx--tabs__nav-link"
                href="/multicloud/dashboard"
                role="tab"
                tabIndex={0}
              >
                Application
              </a>
            </li>
          </ul>
        </nav>
        <div
          aria-hidden={false}
          hidden={false}
          selected={true}
        />
      </div>
    </header>
  </div>
  <div
    className="secondary-header-links"
  >
    <button
      className="bx--btn bx--btn--primary"
      disabled={false}
      id="create-policy"
      onClick={[Function]}
      tabIndex={0}
      type="button"
    >
      Create policy
    </button>
  </div>
</div>
`;

exports[`SecondaryHeader component 2 renders clickable as expected 2`] = `
<div
  aria-label="hello world"
  className="secondary-header-wrapper"
  role="region"
>
  <div
    className="secondary-header secondary-header-grc-overview simple-header"
  >
    <header
      aria-label="Heading: hello world"
    >
      <div
        className="bx--detail-page-header-content"
      >
        <div
          className="bx--detail-page-header-title-container"
        >
          <h1
            className="bx--detail-page-header-title"
          >
            hello world
          </h1>
        </div>
        <nav
          aria-label="hello world undefined"
          className="bx--tabs"
          role="navigation"
          selected={0}
        >
          <div
            aria-label="listbox"
            className="bx--tabs-trigger"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="listbox"
            tabIndex={0}
          >
            <a
              className="bx--tabs-trigger-text"
              href="#"
              onClick={[Function]}
              tabIndex={-1}
            >
              Application
            </a>
            <svg
              alt="show menu options"
              aria-label="show menu options"
              fillRule="evenodd"
              height="5"
              role="img"
              viewBox="0 0 10 5"
              width="10"
            >
              <title>
                show menu options
              </title>
              <path
                d="M0 0l5 4.998L10 0z"
              />
            </svg>
          </div>
          <ul
            className="bx--tabs__nav bx--tabs__nav--hidden"
            role="tablist"
          >
            <li
              className="bx--tabs__nav-item bx--tabs__nav-item--selected"
              id="dashboard-application"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="presentation"
              selected={true}
              tabIndex={-1}
            >
              <a
                aria-selected={true}
                className="bx--tabs__nav-link"
                href="/multicloud/dashboard"
                role="tab"
                tabIndex={0}
              >
                Application
              </a>
            </li>
          </ul>
        </nav>
        <div
          aria-hidden={false}
          hidden={false}
          selected={true}
        />
      </div>
    </header>
  </div>
  <div
    className="secondary-header-links"
  >
    <button
      className="bx--btn bx--btn--primary"
      disabled={false}
      id="create-policy"
      onClick={[Function]}
      tabIndex={0}
      type="button"
    >
      Create policy
    </button>
  </div>
</div>
`;

exports[`SecondaryHeader component 2 renders nonclickable as expected 1`] = `
<div
  aria-label="hello world"
  className="secondary-header-wrapper"
  role="region"
>
  <div
    className="secondary-header secondary-header-grc-overview simple-header"
  >
    <header
      aria-label="Heading: hello world"
    >
      <div
        className="bx--detail-page-header-content"
      >
        <div
          className="bx--detail-page-header-title-container"
        >
          <h1
            className="bx--detail-page-header-title"
          >
            hello world
          </h1>
        </div>
        <nav
          aria-label="hello world undefined"
          className="bx--tabs"
          role="navigation"
          selected={0}
        >
          <div
            aria-label="listbox"
            className="bx--tabs-trigger"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="listbox"
            tabIndex={0}
          >
            <a
              className="bx--tabs-trigger-text"
              href="#"
              onClick={[Function]}
              tabIndex={-1}
            >
              Application
            </a>
            <svg
              alt="show menu options"
              aria-label="show menu options"
              fillRule="evenodd"
              height="5"
              role="img"
              viewBox="0 0 10 5"
              width="10"
            >
              <title>
                show menu options
              </title>
              <path
                d="M0 0l5 4.998L10 0z"
              />
            </svg>
          </div>
          <ul
            className="bx--tabs__nav bx--tabs__nav--hidden"
            role="tablist"
          >
            <li
              className="bx--tabs__nav-item bx--tabs__nav-item--selected"
              id="dashboard-application"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="presentation"
              selected={true}
              tabIndex={-1}
            >
              <a
                aria-selected={true}
                className="bx--tabs__nav-link"
                href="/multicloud/dashboard"
                role="tab"
                tabIndex={0}
              >
                Application
              </a>
            </li>
          </ul>
        </nav>
        <div
          aria-hidden={false}
          hidden={false}
          selected={true}
        />
      </div>
    </header>
  </div>
  <div
    className="secondary-header-links"
  >
    <button
      className="bx--btn bx--btn--primary bx--btn--disabled"
      disabled={true}
      id="create-policy"
      onClick={[Function]}
      tabIndex={0}
      type="button"
    >
      Create policy
    </button>
  </div>
</div>
`;

exports[`SecondaryHeader component 3 renders as expected 1`] = `
<div
  aria-label="hello world"
  className="secondary-header-wrapper"
  role="region"
>
  <div
    className="secondary-header secondary-header-grc-overview simple-header"
  >
    <header
      aria-label="Heading: hello world"
    >
      <div
        className="bx--detail-page-header-content"
      >
        <div
          className="bx--detail-page-header-title-container"
        >
          <h1
            className="bx--detail-page-header-title"
          >
            hello world
          </h1>
        </div>
        <nav
          aria-label="hello world undefined"
          className="bx--tabs"
          role="navigation"
          selected={0}
        >
          <div
            aria-label="listbox"
            className="bx--tabs-trigger"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="listbox"
            tabIndex={0}
          >
            <a
              className="bx--tabs-trigger-text"
              href="#"
              onClick={[Function]}
              tabIndex={-1}
            >
              Application
            </a>
            <svg
              alt="show menu options"
              aria-label="show menu options"
              fillRule="evenodd"
              height="5"
              role="img"
              viewBox="0 0 10 5"
              width="10"
            >
              <title>
                show menu options
              </title>
              <path
                d="M0 0l5 4.998L10 0z"
              />
            </svg>
          </div>
          <ul
            className="bx--tabs__nav bx--tabs__nav--hidden"
            role="tablist"
          >
            <li
              className="bx--tabs__nav-item bx--tabs__nav-item--selected"
              id="logs-tab1"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="presentation"
              selected={true}
              tabIndex={-1}
            >
              <a
                aria-selected={true}
                className="bx--tabs__nav-link"
                href="/multicloud/dashboard"
                role="tab"
                tabIndex={0}
              >
                Application
              </a>
            </li>
            <li
              className="bx--tabs__nav-item"
              id="logs-tab2"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="presentation"
              selected={false}
              tabIndex={-1}
            >
              <a
                aria-selected={false}
                className="bx--tabs__nav-link"
                href="/hello"
                role="tab"
                tabIndex={-1}
              >
                provide a label
              </a>
            </li>
          </ul>
        </nav>
        <div
          aria-hidden={false}
          hidden={false}
          selected={true}
        />
        <div
          aria-hidden={true}
          hidden={true}
          selected={false}
        />
      </div>
    </header>
  </div>
</div>
`;

exports[`SecondaryHeader component 4 renders as expected 1`] = `
<div
  aria-label="hello world secondary"
  className="secondary-header-wrapper-min"
  role="region"
>
  <div
    className="secondary-header simple-header"
  >
    <h1
      className="bx--detail-page-header-title"
    >
      hello world
    </h1>
  </div>
</div>
`;

exports[`SecondaryHeader component 5 renderBreadCrumb1 as expected 1`] = `undefined`;

exports[`SecondaryHeader component 5 renderBreadCrumb2 as expected 1`] = `Array []`;

exports[`SecondaryHeader component 5 renderBreadCrumb3 as expected 1`] = `
Array [
  <div
    className="bx--breadcrumb-item"
    title="label1"
  >
    <div
      className="breadcrumb-link"
      onClick={[MockFunction]}
    />
  </div>,
  <div
    className="bx--breadcrumb-item"
    title="label2"
  >
    <Link
      className="bx--link"
      to="www.test2.com"
    >
      label2
    </Link>
  </div>,
  <div
    className="bx--breadcrumb-item"
    title="label3"
  >
    <div
      className="breadcrumb-link"
      onClick={[MockFunction]}
    />
  </div>,
  <div
    className="bx--breadcrumb-item"
    title="label4"
  >
    <Link
      className="bx--link"
      to="www.test4.com"
    />
  </div>,
]
`;

exports[`SecondaryHeader component 5 renderHeader with description 1`] = `
<div
  className="bx--detail-page-header-title-container"
>
  <h1
    className="bx--detail-page-header-title"
  >
    hello world
  </h1>
  <div
    className="detail-page-header-title-button"
    onClick={[MockFunction]}
  >
    <p>
      [MockFunction]
    </p>
  </div>
</div>
`;

exports[`SecondaryHeader component 5 renderHeader without description 1`] = `
<div
  className="bx--detail-page-header-title-container"
>
  <h1
    className="bx--detail-page-header-title"
  >
    hello world
  </h1>
</div>
`;

exports[`SecondaryHeader component 5 renderLinks nonclickable as expected 1`] = `
Array [
  <ForwardRef
    disabled={true}
    iconDescription="Provide icon description if icon is used"
    id="create-policy"
    kind="primary"
    onClick={[Function]}
    small={false}
    tabIndex={0}
    type="button"
  >
    Create policy
  </ForwardRef>,
]
`;

exports[`SecondaryHeader component 5 renderTabs as expected 1`] = `
Array [
  <Tab
    href="/multicloud/policies"
    id="grc-overview"
    label="Overview"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="presentation"
    selected={false}
    tabIndex={0}
  />,
  <Tab
    href="/multicloud/policies/all"
    id="grc-all"
    label="Policies"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="presentation"
    selected={false}
    tabIndex={0}
  />,
  <Tab
    href="/multicloud/policies/findings"
    id="grc-findings"
    label="Security findings"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="presentation"
    selected={false}
    tabIndex={0}
  />,
]
`;
